correct alignments

--- a/css/respoensive.css
+++ b/css/respoensive.css
@@ -1,6 +1,6 @@
 @media screen and (max-width:480px){
     .hero__text__header--big{
-      font-size:3rem;
+      font-size:2rem;
     }
 
   .header{
