--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,11 @@ p{
 .hero{
   height:100%;
   width:100%;
+  align-items: center;
 }
 
 .hero__text{
+  align-items: center;
   color:var(--orange-color);
 }
 
@@ -148,6 +150,9 @@ font-size: 2rem;
   background-color:var(--bg-gray);
 }
 
+#main-page .page__aside{
+  align-items: center;
+}
 /* header */
 
 .header{
@@ -350,7 +355,7 @@ font-size: 2rem;
 .new-item{
   height:20rem;
   width:15rem;
-  border:1px solid var(--almostblack-color);
+  border:1px solid var(--orange-color);
   border-radius: 5px;
   margin:2rem;
 }
